@@ -1,3 +1,7 @@
+* enhancements
+  * [#28] Improved sign_in and sign_out helpers to accepts resources
+  * [#28] Added stored_location_for as a helper
+
 == 0.5.1
 
 * enhancements
